--- a/video_detective/templates/stream.html
+++ b/video_detective/templates/stream.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <video id="video" width="640" height="480" controls></video>
+    <video id="video" width="640" height="480" controls autoplay muted></video>
   </div>
 
   <script defer>
